Improved English string to be clearer. Fixed po Makefile for POSOURCES.

--- a/po/Makefile
+++ b/po/Makefile
@@ -2,7 +2,7 @@ include ../config.mk
 
 POFILES=$(wildcard *.po)
 MOFILES=$(POFILES:.po=.mo)
-POSOURCES=$(wildcard ../*.c)
+POSOURCES=$(wildcard ../src/*.c)
 
 .PHONY : all clean install uninstall
 
