Fixed incorrect tags in docbook manpage. Updated build scripts to handle the new docbook manpage.

--- a/man/Makefile
+++ b/man/Makefile
@@ -1,8 +1,10 @@
 include ../config.mk
 
-.PHONY : all clean install uninstall
+.PHONY : all clean install uninstall dist dist-clean
 
-all : 
+all : ralcalc.1
+
+ralcalc.1 : dist
 
 clean :
 
@@ -13,3 +15,9 @@ install :
 
 uninstall :
 	-rm -f ${DESTDIR}${mandir}/man1/ralcalc.1 ${DESTDIR}${mandir}/man1/=.1
+
+dist :
+	$(DOCBOOK2MAN) ralcalc.1.xml
+
+dist-clean :
+	-rm -f ralcalc.1
