Use appropriate permissions for man pages - drop the x.

--- a/man/Makefile
+++ b/man/Makefile
@@ -15,11 +15,11 @@ clean :
 
 install :
 	$(INSTALL) -d ${DESTDIR}$(mandir)/man1
-	$(INSTALL) ralcalc.1 ${DESTDIR}${mandir}/man1/ralcalc.1
-	$(INSTALL) =.1 ${DESTDIR}${mandir}/man1/=.1
+	$(INSTALL) -m 644 ralcalc.1 ${DESTDIR}${mandir}/man1/ralcalc.1
+	$(INSTALL) -m 644 =.1 ${DESTDIR}${mandir}/man1/=.1
 	@for c in ${COUNTRIES}; do \
-		$(INSTALL) -D ralcalc-$${c}.1 ${DESTDIR}${mandir}/$${c}/man1/ralcalc.1 ; \
-		$(INSTALL) -D =.1 ${DESTDIR}${mandir}/$${c}/man1/=.1 ; \
+		$(INSTALL) -m 644 -D ralcalc-$${c}.1 ${DESTDIR}${mandir}/$${c}/man1/ralcalc.1 ; \
+		$(INSTALL) -m 644 -D =.1 ${DESTDIR}${mandir}/$${c}/man1/=.1 ; \
 	done
 
 uninstall :
