Override prefix variable in config.mk sensibly rather than replacing it in the file directly.

--- a/debian/rules
+++ b/debian/rules
@@ -11,8 +11,6 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 
-	sed -i 's#^prefix=/usr/local#prefix=/usr#' config.mk
-
 	touch configure-stamp
 
 
@@ -40,7 +38,7 @@ install: build
 	dh_clean -k 
 	dh_installdirs
 
-	$(MAKE) DESTDIR=$(CURDIR)/debian/ralcalc install
+	$(MAKE) prefix=/usr DESTDIR=$(CURDIR)/debian/ralcalc install
 
 
 # Build architecture-independent files here.
