--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,14 @@
 Source: ralcalc
 Section: math
 Priority: optional
-Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
-XSBC-Original-Maintainer: Roger Light <roger@atchoo.org>
-Build-Depends: debhelper (>= 6)
-Standards-Version: 3.8.0
+Maintainer: Roger Light <roger@atchoo.org>
+Build-Depends: debhelper (>= 7)
+Standards-Version: 3.9.2
 Homepage: http://atchoo.org/tools/ralcalc/
 
 Package: ralcalc
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: A command line calculator that can take single line input.
  ralcalc is a simple command line calculator designed to take a single line
  input and produce a result. It is also installed as the "=" command.
