Use xsltproc to generate man pages.

--- a/man/Makefile
+++ b/man/Makefile
@@ -6,7 +6,7 @@ all :
 
 dist : ralcalc.1
 	@for c in ${MANCOUNTRIES}; do \
-		$(DOCBOOK2MAN) --encoding utf8 --to-stdout ralcalc-$${c}.1.xml > ralcalc-$${c}.1; \
+		$(XSLTPROC) ralcalc-$${c}.1.xml -o ralcalc-$${c}.1; \
 	done
 
 clean :
@@ -28,7 +28,8 @@ uninstall :
 	done
 
 ralcalc.1 : ralcalc.1.xml
-	$(DOCBOOK2MAN) ralcalc.1.xml
+	$(XSLTPROC) $^
+	#$(DOCBOOK2MAN) ralcalc.1.xml
 
 distclean :
 	-rm -f ralcalc.1
