Improve man page handling.

--- a/man/Makefile
+++ b/man/Makefile
@@ -6,7 +6,7 @@ all :
 
 dist : ralcalc.1
 	@for c in ${MANCOUNTRIES}; do \
-		$(XSLTPROC) ralcalc-$${c}.1.xml -o ralcalc-$${c}.1; \
+		$(XSLTPROC) ralcalc-$${c}.1.xml; \
 	done
 
 clean :
@@ -17,7 +17,7 @@ install :
 	$(INSTALL) -m 644 ralcalc.1 ${DESTDIR}${mandir}/man1/ralcalc.1
 	$(INSTALL) -m 644 =.1 ${DESTDIR}${mandir}/man1/=.1
 	@for c in ${MANCOUNTRIES}; do \
-		$(INSTALL) -m 644 -D ralcalc-$${c}.1 ${DESTDIR}${mandir}/$${c}/man1/ralcalc.1 ; \
+		$(INSTALL) -m 644 -D $${c}/ralcalc.1 ${DESTDIR}${mandir}/$${c}/man1/ralcalc.1 ; \
 		$(INSTALL) -m 644 -D =.1 ${DESTDIR}${mandir}/$${c}/man1/=.1 ; \
 	done
 
@@ -29,7 +29,6 @@ uninstall :
 
 ralcalc.1 : ralcalc.1.xml
 	$(XSLTPROC) $^
-	#$(DOCBOOK2MAN) ralcalc.1.xml
 
 distclean :
 	-rm -f ralcalc.1
